Make install wait for the db

--- a/hack/Makefile
+++ b/hack/Makefile
@@ -100,6 +100,7 @@ bootstrap:  ## Bootstrap the database.
 		--entrypoint /src/worker/manage.py \
 			archivematica-worker \
 				install \
+					--wait-for-db \
 					--migrate \
 					--username="test" \
 					--password="test" \
