--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,21 @@ jobs:
       packages: write
       id-token: write
       security-events: write
+  release:
+    name: Create release
+    runs-on: ubuntu-latest
+    needs: artifacts
+    permissions:
+      contents: write
+    steps:
+    - name: Release
+      run: gh release create ${{ github.ref_name }} --latest=true --generate-notes
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update:
     name: Update deploy
     runs-on: ubuntu-latest
-    needs: artifacts
+    needs: release
     permissions:
       contents: write
     steps:
