--- a/base/ccp/install.yaml
+++ b/base/ccp/install.yaml
@@ -3,8 +3,7 @@ kind: Job
 metadata:
   name: ccp-install
   annotations:
-    argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook: Sync
 spec:
   backoffLimit: 0
   template:
