--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,12 +27,14 @@ jobs:
     permissions:
       contents: write
     steps:
+    - name: Check out code
+      uses: actions/checkout@v4
     - name: Release
       run: gh release create ${{ github.ref_name }} --latest=true --generate-notes
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   update:
-    name: Update deploy
+    name: Update deploy branch
     runs-on: ubuntu-latest
     needs: release
     permissions:
