--- a/hack/etc/prometheus/prometheus.yml
+++ b/hack/etc/prometheus/prometheus.yml
@@ -3,5 +3,5 @@ scrape_configs:
   scrape_interval: 5s
   static_configs:
   - targets:
-    - archivematica-worker:7999
-    - archivematica-ccp:7999
+    - worker:7999
+    - ccp:7999
