--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -1,6 +1,54 @@
+[project]
+name = "worker"
+version = "0.1.0"
+requires-python = ">=3.12"
+dependencies = [
+    "Django>=4.2,<5",
+    "agentarchives>=0.9.0",
+    "ammcpc>=0.2.0",
+    "bagit",
+    "clamd>=1.0.2",
+    "django-autoslug>=1.9.9",
+    "django-tastypie>=0.14.7",
+    "gearman3",
+    "lxml>=5.3.0",
+    "metsrw>=0.5.1",
+    "orjson>=3.10.7",
+    "opf-fido",
+    "prometheus_client>=0.20.0",
+    "requests>=2.32.3",
+    "unidecode>=1.3.8",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project.scripts]
+worker = "worker.__main__:main"
+
+[tool.uv]
+dev-dependencies = [
+    "coverage[toml]>=7.6.1",
+    "pytest>=8.2.2",
+    "pytest-cov>=5.0.0",
+    "pytest-django>=4.8.0",
+    "pytest-mock>=3.14.0",
+    "pytest-randomly>=3.15.0",
+    "tox>=4.18.0"
+]
+
+[tool.uv.sources]
+bagit = { git = "https://github.com/LibraryOfCongress/bagit-python", rev = "5b7724356d8c5c3a3be9120814d4d996574485a9" }
+gearman3 = { git = "https://github.com/artefactual-labs/python-gearman.git", rev = "b68efc868c7a494dd6a2d2e820fb098a6da9f797" }
+opf-fido = { git = "https://github.com/artefactual-labs/fido.git", rev = "564ceb8018a8650fe931cf20e6780ee008e60fca" }
+
+[tool.setuptools.packages.find]
+include = ["worker.*"]
+
 [tool.pytest.ini_options]
 addopts = "--reuse-db -p no:cacheprovider"
-DJANGO_SETTINGS_MODULE="settings.test"
+DJANGO_SETTINGS_MODULE = "settings.test"
 norecursedirs = ".svn _build tmp* node_modules bower_components share .tox"
 
 [tool.coverage.run]
@@ -90,10 +138,9 @@ envlist =
     linting
 
 [testenv]
-skip_install = True
-deps = -r{toxinidir}/requirements/requirements-dev.txt
 commands = py.test {posargs}
 allowlist_externals =
+    py.test
     bash
     find
 setenv =
