Consolidate compose yamls with profiles

--- a/hack/Makefile
+++ b/hack/Makefile
@@ -10,10 +10,6 @@ NULL :=
 SPACE := $(NULL) $(NULL)
 COMMA := ,
 
-define compose_all
-	docker compose -f docker-compose.yml -f docker-compose.acceptance-tests.yml -f docker-compose.pmm.yml $(1)
-endef
-
 define create_db
 	docker compose exec -T mysql mysql -hlocalhost -uroot -p12345 -e '\
 		DROP DATABASE IF EXISTS `$(1)`; \
@@ -97,7 +93,7 @@ flush-logs:  ## Delete container logs - requires root privileges.
 	@./helpers/flush-docker-logs.sh
 
 stop:  # Stop all containers.
-	$(call compose_all, stop)
+	docker compose stop
 
 help:  ## Print this help message.
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
